--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,22 @@
 {
-	"name": "portfolio",
-	"version": "0.0.1",
-	"description": "Tyler Freeman, Personal Portfolio",
-	"dependencies": {
-		"bootstrap": "~3",
-		"angular": "~1.2",
-		"angular-resource": "~1.2",
-		"angular-mocks": "~1.2",
-		"angular-cookies": "~1.2",
-		"angular-animate": "~1.2",
-		"angular-touch": "~1.2",
-		"angular-sanitize": "~1.2",
-		"angular-bootstrap": "~0.11.2",
-		"angular-ui-utils": "~0.1.1",
-		"angular-ui-router": "~0.2.11"
-	}
+  "name": "portfolio",
+  "version": "0.0.1",
+  "description": "Tyler Freeman, Personal Portfolio",
+  "dependencies": {
+    "bootstrap": "~3",
+    "angular": "^1.4.x",
+    "angular-resource": "^1.4.x",
+    "angular-mocks": "^1.4.x",
+    "angular-cookies": "^1.4.x",
+    "angular-animate": "^1.4.x",
+    "angular-touch": "^1.4.x",
+    "angular-sanitize": "^1.4.x",
+    "angular-bootstrap": "*",
+    "angular-ui-utils": "~0.1.1",
+    "angular-ui-router": "~0.2.15",
+    "angular-material": "~0.11.0"
+  },
+  "devDependencies": {
+    "components-font-awesome": "~4.4.0"
+  }
 }
