--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "gulp-ruby-sass": "^1.0.5",
     "gulp-server": "^0.1.0",
     "gulp-server-livereload": "^1.4.0",
-    "karma": "~0.12.0",
+    "karma": "latest",
     "karma-chrome-launcher": "~0.1.2",
     "karma-coverage": "~0.2.0",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-jasmine": "~0.2.1",
+    "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "~0.1.2",
     "load-grunt-tasks": "~1.0.0",
     "should": "~4.1.0",
