--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-live-server": "0.0.23",
     "gulp-livereload": "^3.8.0",
     "gulp-ruby-sass": "^1.0.5",
+    "gulp-sass": "^2.2.0",
     "gulp-server": "^0.1.0",
     "gulp-server-livereload": "^1.4.0",
     "karma": "latest",
@@ -60,8 +61,10 @@
     "karma-coverage": "~0.2.0",
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "^0.2.2",
-    "karma-phantomjs-launcher": "~0.1.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "load-grunt-tasks": "~1.0.0",
+    "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.5",
     "should": "~4.1.0",
     "supertest": "~0.14.0"
   }
